# shieldgate

./: .gitignore  LICENSE  README.md  architecture_diagram.md  arize-resources.json  closed-loop-cb.json  closed-loop-gh.json  convergence-ref-source.txt  convergence-ref-tests.txt  create_update_payload.py  hackathon.json  nb_create.json  next.config.ts  package.json  paper_content.json  paper_full.json  seed.ts  shieldgate-deck.html  significant_updates.md  tsconfig.json  update_no_platform.json  worklog.md
.zscripts/: build.sh  mini-services-build.sh  mini-services-install.sh
courtvision-ai/: .gitignore  README.md  buidl_submission.md  create_demo.py  pyproject.toml
courtvision-ai/contracts/: hardhat.config.js  package.json
courtvision-ai/contracts/contracts/: CourtVisionToken.sol  NBAMarketFactory.sol  OracleProxy.sol  RewardPool.sol
courtvision-ai/dashboard/: take_screenshots.py
courtvision-ai/dashboard/app/: globals.css  layout.tsx  page.tsx
courtvision-ai/src/courtvision/api/: __init__.py  main.py  routes.py
courtvision-ai/src/courtvision/engines/: __init__.py  prediction.py
courtvision-ai/src/courtvision/models/: __init__.py  nba.py
courtvision-ai/src/courtvision/services/: __init__.py  azuro_service.py  nba_data.py  qwen_client.py
courtvision-ai/tests/test_api/: test_routes.py
courtvision-ai/tests/test_contracts/: test_contract_logic.py
courtvision-ai/tests/test_engines/: test_prediction.py
courtvision-ai/tests/test_models/: test_nba.py
courtvision-ai/tests/test_services/: test_azuro_service.py  test_nba_data.py  test_qwen_client.py
db/: custom.db
download/: article_fabric_ai_foundry_efficiency.md  aws_products.json  build-video.py  convergence-dashboard-demo.webm  convergence-medium-article.md  hackathon.json  hackathon_competehub.json  hackathon_search.json  hackathon_search2.json  hackathon_tracks.json  nba_hackathon.json  nba_tracks.json  portaldot_docs.json  portaldot_search.json  portaldot_search2.json  the_scope_stack_building_ai_financial_intelligence_on_aws.md
download/tw-video/: TSM_PITCH_SCRIPT.md  input.txt  input_final.txt  input_jpg.txt  narration_full.txt  parts.txt  sam_text.txt  sam_tsm.json
finflowrl/: .gitignore  LICENSE  README.md  pyproject.toml
finflowrl/configs/: default.yaml
finflowrl/finflowrl/: __init__.py
finflowrl/finflowrl/env/: __init__.py  hft_env.py  market_simulator.py
finflowrl/finflowrl/evaluation/: __init__.py  metrics.py
finflowrl/finflowrl/experts/: __init__.py  avellaneda_stoikov.py  base.py  glft.py  glft_drift.py  ppo_expert.py
finflowrl/finflowrl/models/: __init__.py  film.py  meanflow.py  noise_policy.py
finflowrl/finflowrl/training/: __init__.py  finetune.py  pretrain.py
finflowrl/finflowrl/utils/: __init__.py  config.py  data.py
finflowrl/scripts/: evaluate.py  train.py
finflowrl/tests/: test_env.py  test_experts.py  test_metrics.py  test_models.py  test_package.py  test_training.py
greenverify-ai/: .gitignore  Cargo.toml  README.md  pyproject.toml
greenverify-ai/.cargo/: config.toml
greenverify-ai/contracts/carbon-credit/: Cargo.toml  lib.rs
greenverify-ai/contracts/marketplace/: Cargo.toml  lib.rs
greenverify-ai/contracts/verifier-registry/: Cargo.toml  lib.rs
greenverify-ai/dashboard/: package-lock.json  package.json
greenverify-ai/dashboard/src/app/: globals.css  layout.tsx  page.tsx
greenverify-ai/dashboard/src/app/credits/: page.tsx
greenverify-ai/dashboard/src/app/marketplace/: page.tsx
greenverify-ai/dashboard/src/app/verify/: page.tsx
greenverify-ai/dashboard/src/components/: MobileNav.tsx  Sidebar.tsx
greenverify-ai/dashboard/src/lib/: api.ts  data.ts  types.ts
greenverify-ai/landing/: package-lock.json  package.json
greenverify-ai/landing/src/app/: globals.css  layout.tsx  page.tsx
greenverify-ai/src/greenverify/: __init__.py
greenverify-ai/src/greenverify/api/: __init__.py  main.py  routes.py
greenverify-ai/src/greenverify/engines/: __init__.py  verifier.py
greenverify-ai/src/greenverify/models/: __init__.py  carbon.py
greenverify-ai/src/greenverify/services/: __init__.py  market_data.py  qwen_client.py
greenverify-ai/tests/: test_api.py  test_market_data.py  test_models.py
metal-monitor/: pyproject.toml
metal-monitor/src/metal_monitor/: __init__.py  database.py  models.py
metal-monitor/src/metal_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metal-monitor/src/metal_monitor/ai/: __init__.py  analyst.py  qwen_client.py
metal-monitor/src/metal_monitor/alerts/: __init__.py  engine.py
metal-monitor/src/metal_monitor/api/: __init__.py  main.py
metal-monitor/src/metal_monitor/api/routes/: alerts.py  analysis.py  prices.py
metal-monitor/src/metal_monitor/scraper/: __init__.py  base.py  metal_com.py  shfe.py  shmet.py
metal-monitor/tests/: test_ai.py  test_alerts.py  test_api.py  test_database.py  test_models.py  test_scraper.py
prisma/: schema.prisma
scripts/: bootstrap-authzed.ts  take-screenshots.ts
skills/fullstack-dev/: SKILL.md
src/app/: layout.tsx  page.tsx
src/app/api/audit/: route.ts
src/app/api/authz/check/: route.ts
src/app/api/chat/: route.ts
src/app/api/incidents/: route.ts
src/app/api/splunk/alerts/: route.ts
src/app/api/splunk/indexes/: route.ts
src/app/api/splunk/query/: route.ts
src/lib/: auth-middleware.ts  authz-types.ts  authz.ts  authzed-client.ts  splunk-client.ts  splunk-sim.ts  store.ts
upload/: M&A Integration Control tower.docx  Metal Price Monitoring Agent.docx
