[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courtvision-ai"
version = "1.0.0"
description = "AI-Powered NBA Prediction Market on Polygon via Azuro Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CourtVision AI Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.58.0",
    "httpx>=0.28.0",
    "web3>=7.6.0",
    "eth-account>=0.13.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
