[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finflowrl"
version = "0.1.0"
description = "Imitation-Reinforcement Learning Framework for Adaptive Stochastic Control in Finance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FinFlowRL Contributors"},
]
keywords = ["reinforcement-learning", "finance", "flow-matching", "market-making", "hft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
train = [
    "tensorboard>=2.14",
    "tqdm>=4.65",
]

[project.scripts]
finflowrl-train = "scripts.train:main"
finflowrl-eval = "scripts.evaluate:main"

[tool.setuptools.packages.find]
include = ["finflowrl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
